--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-hook-form": "^7.54.1",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
+    "typed.js": "^2.1.0",
     "typewriter-effect": "^2.21.0",
     "zod": "^3.24.1"
   },
